bugfix - apontamento Parado not showing the submotivo

--- a/src/app/components/pcp/pcp-home/pcp.component.scss
+++ b/src/app/components/pcp/pcp-home/pcp.component.scss
@@ -72,7 +72,7 @@ nb-layout-column {
     font-size: 13px;
     padding: 2px 10px;
     display: inline-block;
-    margin: 0;
+    margin: 2px !important;
     margin-right: 5px;
     cursor: pointer;
     color: nb-theme(text-alternate-color);
